交叉格子改顏色.css

--- a/交叉格子改顏色.css
+++ b/交叉格子改顏色.css
@@ -14,10 +14,10 @@
     flex-wrap: wrap;
 }
 
-/* DO NOT TOUCH THIS FILE!!!  */
 
 
-/* SOLUTION #1:
+
+/* SOLUTION 1:
 
 .square:nth-child(odd) {
     background-color: red;
